Local references removed

--- a/framework.ini
+++ b/framework.ini
@@ -1,13 +1,13 @@
 
 [Location]
-Syllabi = "C:\\Pallavi\\NSF_AM_Pathways\\Syllabi"
-Results = C:\\Pallavi\\NSF_AM_Pathways\\Syllabi\\Results
+Syllabi = 
+Results = 
 
 [Combinations]
-College = Chipola #BOK/Chipola/PSC/GCSC/NWFSC/TCC/Framework/All
-CourseType = CT #CT/ET/CNT/ENT/All
-ReportType = Radar #Radar/Line/Pie/All
+College = #BOK/Chipola/PSC/GCSC/NWFSC/TCC/Framework/All
+CourseType = #CT/ET/CNT/ENT/All
+ReportType = #Radar/Line/Pie/All
 
 [BOK_Location]
-BLOOMS_TAXONOMY_FILE_PATH = "C:\\Pallavi\\NSF_AM_Pathways\\PythonScripts\\BloomsTaxonomyVerbs.xlsx"
-ACRONYMS_PATH = "C:\\Pallavi\\NSF_AM_Pathways\\Acronyms.xlsx"
+BLOOMS_TAXONOMY_FILE_PATH = 
+ACRONYMS_PATH = 
